0026765: Visualization - drop TKVoxel toolkit