dox/technical_overview/technical_overview.md
@@ -208,10 +208,6 @@ For more details see @ref occt_user_guides__visualization "Visualization User's 
 
 The visualization of OCCT topological shapes by means of VTK library provided by VIS component is described in a separate @ref occt_user_guides__vis "VTK Integration Services" User's Guide.
 
-Open CASCADE Technology also supports voxel representation providing basic data containers and visualization of voxels as colored or grayscale bricks.
-
-See @ref occt_user_guides__voxels_wp "Voxels User's Guide" for more information.
-
 See also: our <a href="http://www.opencascade.com/content/tutorial-learning">E-learning & Training</a> offerings.
 
 
