src/ViewerTest/ViewerTest.hxx
@@ -130,8 +130,6 @@ public:
 
   Standard_EXPORT static void FilletCommands (Draw_Interpretor& theCommands);
 
-  Standard_EXPORT static void VoxelCommands (Draw_Interpretor& theCommands);
-
   Standard_EXPORT static void OpenGlCommands (Draw_Interpretor& theCommands);
 
   Standard_EXPORT static void GetMousePosition (Standard_Integer& xpix, Standard_Integer& ypix);
